correct spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -237,7 +237,12 @@ html{
   } 
 
 /* // Medium devices (tablets, 768px and up) */
-/* @media (min-width: 768px) { ... } */
+ @media (max-width: 768px) { 
+	 html{
+		 font-size: 14px;
+	 }
+	 
+} 
 /* 
 // Large devices (desktops, 992px and down) */
  @media (max-width: 992px) {  
@@ -246,11 +251,12 @@ html{
 } 
 
 .contact {
-  padding-top: 23%;
+  padding-top: 30%;
 }
 
 .contactButton{
-  width: 35%;
+  width: 50%;
+	height:80px;
 }
 .subscribe{
   padding-top:30%;
@@ -258,7 +264,8 @@ html{
 }
 
 .subscribeButton{
-  width: 30%;
+  width: 50%;
+	height: 80px;
 }
 	 
 	 html{
@@ -271,7 +278,7 @@ html{
   }
 	 
 	 .aboutLearnMore{
-		 width: 40%;
+		 width: 50%;
     height: 80px;
 	 }
 
